Added analytics & wrote docs for it
