# Routes/Analytics.js
@@ -1,7 +1,8 @@
 const { Router } = require("express");
+const AnalyticsController = require("../Controllers/Analytics");
 const router = Router();
-const Analytics = require("../Controllers/Analytics");
 
-router.get("/", Analytics.test);
+router.get("/info", AnalyticsController.getInfoFromFileType);
+router.get("/averageDuration", AnalyticsController.AverageDuration);
 
-module.exports = router
+module.exports = router;
